Build (gradle clean dist) will now build a full zipped exe dist!
Closes #72